# SDL2Test

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: BuildTest.yml
